# insurance-blockchain

./: PROJECT_SUMMARY.md  README.md  next.config.js  package-lock.json  package.json
.next/: build-manifest.json  trace
.next/server/: _error.js  middleware-build-manifest.js  pages-manifest.json
.next/server/pages/: _app.js  _document.js  _error.js  index.js  policies.js  products.js
.next/server/vendor-chunks/: @babel.js  @mui.js  next.js
.next/static/chunks/: _error.js  webpack.js
.next/static/development/: _buildManifest.js
.next/static/webpack/: 22c8eeb33f2ed8a6.webpack.hot-update.json  65430367bdbf89f2.webpack.hot-update.json  746efc2ad3d23d71.webpack.hot-update.json  75cb9c6acde8e253.webpack.hot-update.json  7f89b9aa2f9cbdb9.webpack.hot-update.json  8ae144370d8c0314.webpack.hot-update.json  a6e534787470c13b.webpack.hot-update.json  cb184ff5307d3942.webpack.hot-update.json  e197636a2de15c35.webpack.hot-update.json  e51eac11691eb0f2.webpack.hot-update.json  ee397c363bebbeb6.webpack.hot-update.json  webpack.054724277a8a0274.hot-update.js  webpack.22c8eeb33f2ed8a6.hot-update.js  webpack.24a627bc01f60703.hot-update.js  webpack.24da50c1d5022d21.hot-update.js  webpack.4e32c2970c3d552a.hot-update.js  (+18 more)
solana-program/: Cargo.toml
solana-program/src/: lib.rs
solana-program/src/client/: main.ts
src/: theme.ts
src/components/: Layout.tsx  PolicyCard.tsx  ProductCard.tsx
src/contracts/: insurance-program.ts
src/pages/: _app.tsx  index.tsx
src/utils/: context.tsx  identity.ts  mockData.ts  phantomWallet.ts  programInstructions.ts  wallet.ts
(+51 files in other folders)
